[metadata]
name = graphique
version = attr: graphique.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = GraphQL service for arrow tables and parquet data sets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/graphique
license = Apache Software License
keywords = graphql, arrow, parquet
project_urls =
    Documentation = https://coady.github.io/graphique
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Database Engines/Servers
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = graphique
python_requires = >=3.7
install_requires =
    pyarrow>=6
    strawberry-graphql[asgi]>=0.84.4

[options.package_data]
graphique = py.typed, arrayed.pyx

[options.extras_require]
server = uvicorn[standard]

[flake8]
max-line-length = 100
exclude = .venv
ignore = E501

[coverage:run]
source = graphique
branch = True
plugins = Cython.Coverage
omit = graphique/schema.py

[mypy]

[mypy-pyarrow.*]
ignore_missing_imports = True

[mypy-strawberry.*]
ignore_missing_imports = True

[mypy-starlette.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-cached_property.*]
ignore_missing_imports = True
